<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="asterixorobelix.afrikaburn.ui.project.ProjectFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:shimmer_auto_start="true"
                app:shimmer_clip_to_children="true"
                app:shimmer_colored="true"
                app:shimmer_highlight_color="@color/colorAccent"
                tools:visibility="gone">

                <include
                    layout="@layout/layout_search_item"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="100dp" />

                <include
                    layout="@layout/layout_search_item"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/project_info_body_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/medium_dimen"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/title_favourite_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/project_title"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        tools:text="Hello ProjectFragment" />

                    <ImageView
                        android:id="@+id/project_favourite_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        tools:src="@drawable/ic_favourite" />
                </LinearLayout>

                <TextView
                    android:id="@+id/collective_text"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title_favourite_layout"
                    tools:text="Collective: Mad dogs" />

                <LinearLayout
                    android:id="@+id/categories_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/medium_image"
                    android:layout_margin="@dimen/small_dimen"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/collective_text">

                    <ImageView
                        android:id="@+id/project_type_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:src="@drawable/ic_art" />

                    <ImageView
                        android:id="@+id/sound_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:src="@drawable/ic_speaker" />

                    <ImageView
                        android:id="@+id/burn_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="gone"
                        tools:src="@drawable/ic_fire"
                        tools:visibility="visible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/body_textview"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/categories_layout"
                    tools:text="Loads and loads and loads of text" />

                <LinearLayout
                    android:id="@+id/sound_level_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/project_items_recycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body_textview"
                    tools:visibility="visible">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/sound_level" />

                    <TextView
                        android:id="@+id/level"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:text="Stadium sound" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/project_items_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sound_level_layout"
                    tools:listitem="@layout/layout_search_item" />

                <TextView
                    android:id="@+id/map_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_dimen"
                    android:text="@string/map"
                    app:layout_constraintTop_toBottomOf="@id/project_items_recycler" />

                <com.mapbox.mapboxsdk.maps.MapView
                    android:id="@+id/map_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/map_title"
                    mapbox:mapbox_cameraTargetLat="@string/offline_map_target_latitude"
                    mapbox:mapbox_cameraTargetLng="@string/offline_map_target_longitude"
                    mapbox:mapbox_cameraZoom="15" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>